force-app/main/default/objects/Rv_SubscribeToSHT__e/Rv_SubscribeToSHT__e.object-meta.xml
<CustomObject>
    <description>This event wll be triggered if any deal is created on SHT.This event will be handled from SHT Dave Screen using cometD library</description>
    <label>Rv_SubscribeToSHT</label>
    <pluralLabel>Rv_SubscribeToSHT</pluralLabel>
</CustomObject>