force-app/main/default/objects/Rv_SubscribeToSHT__e/fields/Exposure_Factor__c.field-meta.xml
<CustomField>
    <fullName>Exposure_Factor__c</fullName>
    <label>Exposure Factor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>