force-app/main/default/objects/Rv_SubscribeToSHT__e/fields/Hedged_Vol__c.field-meta.xml
<CustomField>
    <fullName>Hedged_Vol__c</fullName>
    <label>Hedged Vol</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>