force-app/main/default/objects/Rv_SubscribeToSHT__e/fields/Mass_CBM__c.field-meta.xml
<CustomField>
    <fullName>Mass_CBM__c</fullName>
    <label>Mass CBM</label>
    <length>20</length>
    <type>Text</type>
</CustomField>