force-app/main/default/objects/Rv_SubscribeToSHT__e/fields/Mass_MT__c.field-meta.xml
<CustomField>
    <fullName>Mass_MT__c</fullName>
    <label>Mass MT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>