force-app/main/default/objects/Rv_SubscribeToSHT__e/fields/RecordId__c.field-meta.xml
<CustomField>
    <fullName>RecordId__c</fullName>
    <label>RecordId</label>
    <length>32</length>
    <type>Text</type>
</CustomField>