force-app/main/default/objects/Rv_SubscribeToSHT__e/fields/Time_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Time_Stamp__c</fullName>
    <label>Time Stamp</label>
    <length>20</length>
    <type>Text</type>
</CustomField>