force-app/main/default/objects/Rv_SubscribeToSHT__e/fields/Transactions__c.field-meta.xml
<CustomField>
    <fullName>Transactions__c</fullName>
    <label>Transactions</label>
    <length>20</length>
    <type>Text</type>
</CustomField>